--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,14 @@
-sonar.projectKey=Nidhip2e_react-app_AYm3evNSafDTTbzaGBrR
+#sonar.projectKey=Nidhip2e_react-app_AYnOhFHmdPEZW19cblbe
+sonar.projectKey=Nidhip2e_react-app
+sonar.organization=nidhip2e
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=react-app
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
